--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha tests --compilers js:@babel/register"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "@babel/core": "^7.1.2",
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
+    "@babel/register": "^7.0.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.5"
   },
   "dependencies": {}
